Fixed navigation in scribble & added types to response api
