# packages/backend-nestjs/src/scribble/dtos/create-room.dto.ts
@@ -1,5 +1,5 @@
 import { IsString, IsEmail, MinLength, ValidateNested, IsUUID } from 'class-validator';
-import { ApiProperty } from '@nestjs/swagger';
+import { ApiProperty, ApiResponseNoStatusOptions } from '@nestjs/swagger';
 
 
 export class CreateRoomDto {
@@ -9,3 +9,16 @@ export class CreateRoomDto {
   @IsString()
   readonly username: string;
 }
+
+export class CreateRoomResponseDto {
+  @ApiProperty({
+    example: '550e8400-e29b-41d4-a716-446655440000',
+  })
+  @IsUUID()
+  readonly roomId: string;
+}
+
+export const createRoomApiResOptions: ApiResponseNoStatusOptions = {
+  description: 'Room created successfully',
+  type: CreateRoomResponseDto,
+};
