# packages/backend-nestjs/src/scribble/dtos/join-room.dto.ts
@@ -1,5 +1,5 @@
 import { IsString, IsEmail, MinLength, ValidateNested, IsUUID } from 'class-validator';
-import { ApiProperty } from '@nestjs/swagger';
+import { ApiProperty, ApiResponseNoStatusOptions } from '@nestjs/swagger';
 
 
 export class JoinRoomDto {
@@ -15,3 +15,17 @@ export class JoinRoomDto {
   @IsUUID()
   readonly roomId: string;
 }
+
+
+export class JoinRoomResponseDto {
+  @ApiProperty({
+    example: '550e8400-e29b-41d4-a716-446655440000',
+  })
+  @IsUUID()
+  readonly roomId: string;
+}
+
+export const joinRoomApiResOptions: ApiResponseNoStatusOptions = {
+  description: 'Room Joind successfully',
+  type: JoinRoomResponseDto,
+};
